[package]
name = "solana-basics-cheat-sheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
solana-client = "2.0.5"
solana-program = "2.0.5"
solana-sdk = "2.0.5"
